feat: update account, roomtype, hotel, rateplan api
